// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusGroup does not render its children after being collapsed via the toggle button 1`] = `
<div
  className={null}
>
  <div
    className="kuiTogglePanelHeader"
  >
    <button
      className="kuiToggleButton"
      onClick={[Function]}
    >
      <span
        className="upgradePluginPanelHeader"
      >
        <span>
          <span
            className="kuiIcon kuiToggleButton__icon fa-caret-right"
          />
        </span>
        <span />
      </span>
    </button>
  </div>
</div>
`;

exports[`StatusGroup does not render its children by default when isInitiallyCollapsed is true 1`] = `
<div
  className={null}
>
  <div
    className="kuiTogglePanelHeader"
  >
    <button
      className="kuiToggleButton"
      onClick={[Function]}
    >
      <span
        className="upgradePluginPanelHeader"
      >
        <span>
          <span
            className="kuiIcon kuiToggleButton__icon fa-caret-right"
          />
        </span>
        <span />
      </span>
    </button>
  </div>
</div>
`;

exports[`StatusGroup renders its children after being expanded via the toggle button 1`] = `
<div
  className={null}
>
  <div
    className="kuiTogglePanelHeader"
  >
    <button
      className="kuiToggleButton"
      onClick={[Function]}
    >
      <span
        className="upgradePluginPanelHeader"
      >
        <span>
          <span
            className="kuiIcon kuiToggleButton__icon fa-caret-down"
          />
        </span>
        <span />
      </span>
    </button>
  </div>
  <div
    className="kuiTogglePanelContent"
  >
    Info Message
  </div>
</div>
`;

exports[`StatusGroup renders its children by default 1`] = `
<div
  className={null}
>
  <div
    className="kuiTogglePanelHeader"
  >
    <button
      className="kuiToggleButton"
      onClick={[Function]}
    >
      <span
        className="upgradePluginPanelHeader"
      >
        <span>
          <span
            className="kuiIcon kuiToggleButton__icon fa-caret-down"
          />
        </span>
        <span />
      </span>
    </button>
  </div>
  <div
    className="kuiTogglePanelContent"
  >
    Info Message
  </div>
</div>
`;

exports[`StatusGroup renders its children by default when isInitiallyCollapsed is false 1`] = `
<div
  className={null}
>
  <div
    className="kuiTogglePanelHeader"
  >
    <button
      className="kuiToggleButton"
      onClick={[Function]}
    >
      <span
        className="upgradePluginPanelHeader"
      >
        <span>
          <span
            className="kuiIcon kuiToggleButton__icon fa-caret-down"
          />
        </span>
        <span />
      </span>
    </button>
  </div>
  <div
    className="kuiTogglePanelContent"
  >
    Info Message
  </div>
</div>
`;

exports[`StatusGroup renders the className, title and status properties 1`] = `
<div
  className="specificStatusGroup"
>
  <div
    className="kuiTogglePanelHeader"
  >
    <button
      className="kuiToggleButton"
      onClick={[Function]}
    >
      <span
        className="upgradePluginPanelHeader"
      >
        <span>
          <span
            className="kuiIcon kuiToggleButton__icon fa-caret-down"
          />
          A different title
        </span>
        <span>
          the status
        </span>
      </span>
    </button>
  </div>
  <div
    className="kuiTogglePanelContent"
  />
</div>
`;
